--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "yiisoft/yii": "1.1.*"
+        "yiisoft/yii": "1.1.*",
+        "crisu83/yii-bootstrap": "2.*"
     }
 }
